# Swinash

./: .gitignore  README.md  phase1_5_clean_data.py  phase1_data_recon.py  phase2_5_prepare_features.py  phase2_visual_eda.py  phase3_xgboost_baseline.py  pyproject.toml  score_submission.py
data/modeling/: feature_columns.csv  test_features.csv  test_ids.csv  train_features.csv  train_ids.csv  train_target_direction.csv  train_target_return.csv
data/processed/: sample_submission_clean.csv  test_clean.csv  train_clean.csv
reports/phase2_5_prepare_features/: outlier_caps.csv
reports/phase2_visual_eda/: correlation_summary.csv  mutual_information_summary.csv  outlier_summary.csv
submissions/: xgboost_baseline_submission.csv
