[project]
name = "swinash"
version = "0.1.0"
description = "Practice workspace for a Kaggle-style stock prediction hackathon."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "xgboost>=2.1.0,<4.0.0",
]
